# SAT-solving-library

./: DIMACS_encoding.py  DIMACS_reader.py  README.md  Syntax_tree.py  dpll.py  dpll_tests.py  input.txt  look_ahead.py  pyproject.toml  temp.py  test_file_dimacs.txt
decision_heuristics/choose_literal/: choose_best_score.py  choose_random.py
decision_heuristics/precompute_score/: jaroslow_wang_h.py
difference_heuristics/: crh.py  heuristic.py  wbh.py
inputy_pro_dpll/: input.txt
look_ahead_parts/look_ahead_variants/: look_ahead_baisc.py
propagate/: propagate_binary.py  unit_propagate_adjacency_list.py  unit_propagate_watched_literals.py
solving_tasks/backbone/: experiments.py
solving_tasks/equivalences/: experiment.py  out.txt  out_phole.txt  solution.py
solving_tasks/n_queens_problem/: n_queens.py
src/parser/: DIMACS_reader.py  __init__.py
src/solver/: __init__.py
src/solver.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
task1/: DIMACS_encoding.py  Syntax_tree.py  formula_node.py  task1_tests.py
task2/: ais_lc_a.txt  ais_lc_w.txt  experiments.py  flat75_out.txt  out_ais.txt  out_flat50.txt  out_uu50.txt
task2,3/outputs/: ais_random - kopie.txt  ais_w_lc - kopie.txt  flat150_lc_w - kopie.txt  flat75_lc_a - kopie.txt  out_uu50_watched - kopie.txt  phole_lc_w_rand.txt  phole_vsids_w - kopie.txt
task23/: ais_look_ahead_wbh.txt  experiments.py
task4/: experiments.py
task5/: ais_look_ahead_cbh.txt  ais_look_ahead_cbh_fds.txt  ais_look_ahed_w.txt  experiments.py  lc_look_ahead_PHOLE.txt  phole_look_ahead_cbh_fds.txt  phole_look_ahead_wbh.txt
(+74 files in other folders)
